--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: white;
-    font-family: "gilroy";
+    color:#fff;
+    font-family:"Plain Light";
 }
 html,body{
     height: 100%;
@@ -20,6 +20,19 @@ html,body{
     height: 100vh;
     width: 100%;
     background-color: #151515;
+}
+#crsr{
+    height: 3vw;
+    width: 3vw;
+    border-radius:50%;
+    /* background-color: wheat;
+     */
+     border:1px solid white ;
+    position: fixed;
+    z-index: 999;
+    mix-blend-mode: difference;
+    transform: translate(-50%,-50%);
+
 }
 #loader{
  height: 100%;
@@ -65,6 +78,55 @@ html,body{
     opacity: 0;
     animation-duration: 1.5s;
     animation-iteration-count: infinite;
+}
+#page1 #nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 2.5vw 5.5vw;
+}
+#nav-part2{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 3vw;     
+}
+#nav-part2 h4{
+    font-size: 1.2vw;
+    font-weight: 400;
+}
+.hero{
+    /* background-color: red; */
+    width:75%;
+    margin-left: 25%; 
+    height: fit-content; 
+    overflow: hidden; 
+    display: flex;
+    align-items: center;
+    position: relative;
+    z-index: 99999;
+
+}
+.hero:nth-child(2){
+    margin-top: 12vh;
+}
+.hero h1{
+    font-size: 8vw;
+    text-transform: uppercase;
+    line-height: 8vw;
+}
+.hero h2,.hero h3{
+    font-size: 8vw;
+    text-transform: uppercase;
+    line-height: 8vw;
+      /* Set a base color first */
+    /* border-bottom: 0.5vw solid #fff; */
+}
+
+.hero h2:hover{
+    -webkit-text-stroke: 1px #fff;
+    color: transparent;
+    font-weight: 500;
 }
 
 @keyframes  anime {
